Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,9 @@
 			{% include sidebar.html %}
 
 			<p class="copyright">
+			    Template by
 				<a href="https://cloudcannon.com/">
-					Template by CloudCannon
+					CloudCannon
 				</a>
 			</p>
 		</header>
